# FontInAss

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: release-cli.yml
cli/: Cargo.toml  README.md
cli/.github/workflows/: release.yml
cli/src/: client.rs  config.rs  display.rs  main.rs
server/: package.json
server/src/: cache.ts  config.ts  index.ts
server/src/lib/: archive-utils.ts  font-validator.ts  r2-storage.ts  subsetter.ts  uuencode.ts
server/src/routes/: fonts.ts  logs.ts  sharing.ts  subset.ts  upload.ts
web/: index.html  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts
web/src/components/: ArchiveCard.vue  ArchiveEditModal.vue  ArchivePreviewModal.vue  KButton.vue  SettingsPanel.vue  SharingAdminPane.vue
web/src/lib/: format.ts
web/src/locales/: en-US.ts  zh-CN.ts
web/src/views/: AboutView.vue  CliView.vue  CommentsView.vue  FontsView.vue  SharingView.vue  SubsetView.vue
