[package]
name = "fontinass"
version = "0.1.0"
edition = "2024"
description = "CLI tool for FontInAss subtitle font subsetting service"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indicatif = "0.17"
console = "0.15"
base64 = "0.22"
glob = "0.3"
walkdir = "2"
dirs = "6"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
